test/integration/bad/tuples/function-mismatch1.stan
functions {
  void foo(tuple(real, data real) x) {
    print(x.1);
  }
}
